--- a/TypeScriptHTMLApp1/TypeScriptHTMLApp1/index.html
+++ b/TypeScriptHTMLApp1/TypeScriptHTMLApp1/index.html
@@ -7,9 +7,10 @@
 </head>
 <body>
     <script src="lib\easeljs-0.8.0.min.js"></script>
-    <script src="cell-data.js"></script>
+    <script src="gameobject-data.js"></script>
     <script src="utils.js"></script>
     <script src="constants.js"></script>
+    <script src="food.js"></script>
     <script src="cell.js"></script>
     <script src="menu.js"></script>
     <script src="graphics-engine.js"></script>
