--- a/TypeScriptHTMLApp1/TypeScriptHTMLApp1/index.html
+++ b/TypeScriptHTMLApp1/TypeScriptHTMLApp1/index.html
@@ -10,6 +10,7 @@
     <script src="gameobject-data.js"></script>
     <script src="utils.js"></script>
     <script src="constants.js"></script>
+    <script src="game-object.js"></script>
     <script src="food.js"></script>
     <script src="cell.js"></script>
     <script src="menu.js"></script>
