--- a/TypeScriptHTMLApp1/TypeScriptHTMLApp1/index.html
+++ b/TypeScriptHTMLApp1/TypeScriptHTMLApp1/index.html
@@ -13,9 +13,10 @@
     <script src="game-object.js"></script>
     <script src="food.js"></script>
     <script src="cell.js"></script>
+    <script src="being.js"></script>
     <script src="menu.js"></script>
     <script src="graphics-engine.js"></script>
-    <script src="gameobject-factory.js"></script>
+    <script src="cell-factory.js"></script>
     <script src="mechanic-engine.js"></script>
     <script src="map.js"></script>
     <script src="game.js"></script>
