--- a/TypeScriptHTMLApp1/TypeScriptHTMLApp1/index.html
+++ b/TypeScriptHTMLApp1/TypeScriptHTMLApp1/index.html
@@ -6,7 +6,9 @@
     <meta charset="utf-8" />
 </head>
 <body>
+    <canvas id="gameCanvas"></canvas>
     <script src="lib\easeljs-0.8.0.min.js"></script>
+    <script src="lib\jquery-2.1.3.min.js"></script>
     <script src="gameobject-data.js"></script>
     <script src="utils.js"></script>
     <script src="constants.js"></script>
@@ -14,9 +16,12 @@
     <script src="food.js"></script>
     <script src="cell.js"></script>
     <script src="being.js"></script>
+    <script src="npc.js"></script>
     <script src="menu.js"></script>
+    <script src="controls-manager.js"></script>
     <script src="graphics-engine.js"></script>
-    <script src="cell-factory.js"></script>
+    <script src="factories\cell-factory.js"></script>
+    <script src="factories\being-factory.js"></script>
     <script src="mechanic-engine.js"></script>
     <script src="map.js"></script>
     <script src="game.js"></script>
