--- a/TypeScriptHTMLApp1/TypeScriptHTMLApp1/index.html
+++ b/TypeScriptHTMLApp1/TypeScriptHTMLApp1/index.html
@@ -22,6 +22,7 @@
     <script src="graphics-engine.js"></script>
     <script src="factories\cell-factory.js"></script>
     <script src="factories\being-factory.js"></script>
+    <script src="factories\gameobject-factory.js"></script>
     <script src="mechanic-engine.js"></script>
     <script src="map.js"></script>
     <script src="game.js"></script>
