--- a/TypeScriptHTMLApp1/TypeScriptHTMLApp1/index.html
+++ b/TypeScriptHTMLApp1/TypeScriptHTMLApp1/index.html
@@ -4,28 +4,31 @@
 <head>
     <title></title>
     <meta charset="utf-8" />
+    <!--<link href="canvas-style.css" rel="stylesheet" type="text/css">-->
 </head>
 <body>
+    
     <canvas id="gameCanvas"></canvas>
+    <canvas id="cellMenuCanvas"></canvas>
     <script src="lib\easeljs-0.8.0.min.js"></script>
     <script src="lib\jquery-2.1.3.min.js"></script>
-    <script src="gameobject-data.js"></script>
-    <script src="utils.js"></script>
-    <script src="constants.js"></script>
-    <script src="game-object.js"></script>
-    <script src="food.js"></script>
-    <script src="cell.js"></script>
-    <script src="being.js"></script>
-    <script src="npc.js"></script>
-    <script src="menu.js"></script>
-    <script src="controls-manager.js"></script>
-    <script src="graphics-engine.js"></script>
+    <script src="client-scripts\gameobject-data.js"></script>
+    <script src="client-scripts\utils.js"></script>
+    <script src="client-scripts\constants.js"></script>
+    <script src="client-scripts\game-object.js"></script>
+    <script src="client-scripts\food.js"></script>
+    <script src="client-scripts\cell.js"></script>
+    <script src="client-scripts\being.js"></script>
+    <script src="client-scripts\npc.js"></script>
+    <script src="menus\menu.js"></script>
+    <script src="client-scripts\controls-manager.js"></script>
+    <script src="client-scripts\graphics-engine.js"></script>
     <script src="factories\cell-factory.js"></script>
     <script src="factories\being-factory.js"></script>
     <script src="factories\gameobject-factory.js"></script>
-    <script src="mechanic-engine.js"></script>
-    <script src="map.js"></script>
-    <script src="game.js"></script>
-    <script src="application.js"></script>
+    <script src="client-scripts\mechanic-engine.js"></script>
+    <script src="client-scripts\map.js"></script>
+    <script src="client-scripts\game.js"></script>
+    <script src="client-scripts\application.js"></script>
 </body>
 </html>
