CellAddMenu design implemented

--- a/TypeScriptHTMLApp1/TypeScriptHTMLApp1/index.html
+++ b/TypeScriptHTMLApp1/TypeScriptHTMLApp1/index.html
@@ -21,6 +21,7 @@
     <script src="client-scripts\being.js"></script>
     <script src="client-scripts\npc.js"></script>
     <script src="menus\menu.js"></script>
+    <script src="menus\cell-menu.js"></script>
     <script src="client-scripts\controls-manager.js"></script>
     <script src="client-scripts\graphics-engine.js"></script>
     <script src="factories\cell-factory.js"></script>
