--- a/TypeScriptHTMLApp1/TypeScriptHTMLApp1/index.html
+++ b/TypeScriptHTMLApp1/TypeScriptHTMLApp1/index.html
@@ -12,6 +12,7 @@
     <canvas id="cellMenuCanvas"></canvas>
     <script src="lib\easeljs-0.8.0.min.js"></script>
     <script src="lib\jquery-2.1.3.min.js"></script>
+    <script src="lib\Event.js"></script>
     <script src="client-scripts\gameobject-data.js"></script>
     <script src="client-scripts\utils.js"></script>
     <script src="client-scripts\constants.js"></script>
