Draft tissues + Being.addNewCell

--- a/TypeScriptHTMLApp1/TypeScriptHTMLApp1/index.html
+++ b/TypeScriptHTMLApp1/TypeScriptHTMLApp1/index.html
@@ -19,6 +19,7 @@
     <script src="client-scripts\game-object.js"></script>
     <script src="client-scripts\food.js"></script>
     <script src="client-scripts\cell.js"></script>
+    <script src="client-scripts\tissue.js"></script>
     <script src="client-scripts\being.js"></script>
     <script src="client-scripts\npc.js"></script>
     <script src="menus\menu.js"></script>
