Energy shooting + removeDeads

--- a/TypeScriptHTMLApp1/TypeScriptHTMLApp1/index.html
+++ b/TypeScriptHTMLApp1/TypeScriptHTMLApp1/index.html
@@ -12,12 +12,11 @@
     <script src="lib\easeljs-0.8.0.min.js"></script>
     <script src="lib\jquery-2.1.3.min.js"></script>
     <script src="lib\Event.js"></script>
-    <script src="client-scripts\gameobject-data.js"></script>
-    <script src="client-scripts\utils.js"></script>
     <script src="client-scripts\constants.js"></script>
+    <script src="client-scripts\utils.js"></script>
     <script src="client-scripts\game-object.js"></script>
+    <script src="client-scripts/bullet.js"></script>
     <script src="client-scripts\food.js"></script>
-    <script src="client-scripts\cell.js"></script>
     <script src="client-scripts\tissue.js"></script>
     <script src="client-scripts\being.js"></script>
     <script src="client-scripts\npc.js"></script>
@@ -25,6 +24,10 @@
     <script src="menus\cell-menu.js"></script>
     <script src="client-scripts\controls-manager.js"></script>
     <script src="client-scripts\graphics-engine.js"></script>
+    <script src="client-scripts\cell.js"></script>
+    <script src="client-scripts\gameobject-data.js"></script>
+    <script src="client-scripts/weapons.js"></script>
+    <script src="factories/bullet-factory.js"></script>
     <script src="factories\cell-factory.js"></script>
     <script src="factories\being-factory.js"></script>
     <script src="factories\gameobject-factory.js"></script>
